1.4.x (unreleased)
==================

  * Mime type links are now urllib quoted.  This fixes #682 
    (http://dev.plone.org/archetypes/ticket/682).
    [rocky]

1.4.0-final - 2006-06-16
========================

  * Use zope.contenttype in favor of zope.app.content_types if available.
    [hannosch]

1.4.0-beta2 - 2006-05-12
========================

  * Use zope.app.content_types in favor of OFS.content_types if available.
    [stefan]

  * Spring-cleaning of tests infrastructure.
    [hannosch]

1.4.0-beta1 - 2006-03-26
========================

  * fixed Plone #5027: MimeTypeRegistry.classify doesn't handle 
    "no mimetype" gracefully. Returns 'None' now.
    [jensens]

  * fixed http://dev.plone.org/archetypes/ticket/622
    [jensens] 

1.4.0-alpha02 - 2006-02-23
==========================

  * ensured that the key gotten back from windows_mimetypes.py existed
    mark says the best way is to examine each key to ensure its valid but
    would be slower.
    [runyaga]

  * removed odd archetypes 1.3 style version checking
    [jensens]

  * Removed BBB code for CMFCorePermissions import location.
    [hannosch]

  * removed deprecation warning for ToolInit.
    [jensens]

  * skip backward compatibility to the times where MTR where part of 
    PortalTransforms.
    [jensens]

1.3.8-final02 - 2006-01-15
==========================

  * nothing - the odd version checking needs a version change to stick to
    Archetypes version again.
    [yenzenz]

1.3.8-RC1 - 2005-12-29
======================

  * Split yet another part of register() into a separate
    method. Cleanup smi_mimetypes initialize a little bit to to use
    the new method when adding new mimetypes to a already-registered
    entry.
    [dreamcatcher]

  * Include aliases in the list of mimetypes for a entry. Based on
    patch by Jean Jordaan
    [dreamcatcher]

  * Use a SAX-based parser instead of minidom to improve Zope startup
    time (by 17 seconds on my Pismo) and memory footprint.